# AI-Lead-Generation-Agent

./: .gitignore  README.md  pytest.ini  requirements-dev.txt
backend/: .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/api/: __init__.py  deps.py
backend/app/api/v1/: __init__.py  analytics.py  discovery.py  icp.py  jobs.py  leads.py  outreach.py  pipeline.py  qualification.py  reporting.py  router.py  scoring.py  webhooks.py
backend/app/collectors/: __init__.py  base.py  business_directories.py  community_platforms.py  crunchbase.py  github.py  google_business.py  google_maps.py  job_platforms.py  linkedin.py  orchestrator.py  search_engines.py  social_media.py  startup_directories.py  threads_tiktok.py  web_scraper.py
backend/app/collectors/utils/: __init__.py  anti_block.py  proxy_rotator.py  rate_limiter.py
backend/app/core/: __init__.py  errors.py  security.py
backend/app/models/: __init__.py
backend/app/outreach/: __init__.py  ab_testing.py  classifier.py  compliance.py  personalizer.py  sender.py  sequencer.py  threads_dm.py  tracker.py  whatsapp.py
backend/app/qualification/: __init__.py  embedder.py  enrichment.py  llm_analyzer.py  scorer.py  signal_detector.py
backend/app/schemas/: __init__.py
backend/lead_gen_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: __init__.py  conftest.py  test_api.py  test_crm.py  test_outreach.py  test_outreach_channels.py  test_qa_collectors.py  test_qa_scoring_logic.py  test_qualification.py
tests/: conftest.py
(+18 files in other folders)
